# NewsClawer

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
base/: base_login.py
config/: __init__.py  base_config.py  toutiao_config.py
news_clawer/: main.py
news_clawer/base/: base_crawler.py
news_clawer/config/: __init__.py  base_config.py  linuxdo_config.py  pengpai_config.py  sina_config.py  toutiao_config.py  tx_config.py  weibo_config.py
news_clawer/model/: news.py
news_clawer/store/: db.py  postgres_store.py
news_clawer/tools/: browser.py  http.py
news_clawer_backend/: .env.example  README.md
news_clawer_backend/app/: __init__.py  db.py  main.py  schemas.py
news_clawer_backend/app/routers/: crawl.py  news.py
news_clawer_frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
news_clawer_frontend/src/: App.tsx  api.ts  main.tsx  platforms.ts  styles.css  useTheme.ts
news_clawer_frontend/src/components/: DetailDrawer.tsx  Header.tsx  NewsRow.tsx  PlatformCard.tsx
store/: base.py  json_store.py
tools/: headers.py  logger.py  utils.py
