[project]
name = "newsclawer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
