[project]
name = "newsclawer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "parsel>=1.11.0",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]
